General clean up

--- a/pi/PPRemote_Config.ini
+++ b/pi/PPRemote_Config.ini
@@ -1,7 +1,8 @@
 [Default]
 DAQ = "daqhats"
 Device = "mcc128"
-NumChannels = 2
+ReadMode = "Differential"
+NumChannels = 4
 
 [PPRemote Config]
 DAQ = "daqhats"
