More clean up and moving settings to config file

--- a/pi/PPRemote_Config.ini
+++ b/pi/PPRemote_Config.ini
@@ -1,4 +1,14 @@
 [Default]
+# General info
+number_of_channels = 1
+data_log_frequency = 1
+sensor_read_frequency = 0.1
+other_sensor_read_frequency_values = #0.1 #25 #Hz
+network_write_frequency = 10
+other_network_write_frequency_values = #10.0 #Hz How many data points will be graphed each second
+to_log = False
+
+# MCC128 Settings
 DAQ = "daqhats"
 Device = "mcc128"
 ReadMode = "Differential"
@@ -8,3 +18,4 @@ NumChannels = 4
 DAQ = "daqhats"
 Device = "mcc128"
 NumChannels = 2
+
