Cleaning up and refactoring, moved sleep_between_reads to readDaq() in ADCStreamReader, moving DAQ info to PPRemote_Config.ini file.

--- a/pi/PPRemote_Config.ini
+++ b/pi/PPRemote_Config.ini
@@ -1,12 +1,24 @@
 [Default]
 # General info
-number_of_channels = 1
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
 network_write_frequency = 10
 other_network_write_frequency_values = #10.0 #Hz How many data points will be graphed each second
 to_log = False
+
+# General settings
+sleep_between_reads = -1
+sleep_between_channels = 0.25
+number_of_channels = 4
+low_chan = 0
+high_chan = 3
+channels = [True, True, True, True]
+sensor_type = 'mcc_single_value_read'
+# other_sensor_types = 'mcc_single_value_read'  # 'grove_gsr' # 'dummy_read' #'single_ended' #'differential_i2c' #'single_ended' #'differential'
+
+
+
 
 # MCC128 Settings
 DAQ = "daqhats"
