--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,5 +1,7 @@
 [Default]
 # General info
+daq_to_use = 'ADS1115Stream'
+single_ended_or_differential = 'single-ended'
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
