R removed quotes around strings in config file

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,6 @@
 [Default]
 # General info
-daq_to_use = 'ADS1115Stream'
+daq_to_use = ADS1115Stream
 single_ended_or_differential = 'single-ended'
 data_log_frequency = 1
 sensor_read_frequency = 0.1
