F Changed ADS1115 differential reads to save in mV instead of raw values.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,7 +1,6 @@
 [Default]
 # General info
 daq_to_use = ADS1115Stream
-single_ended_or_differential = 'single-ended'
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
@@ -33,6 +32,10 @@ input_range = "AnalogInputRange.BIP_10V"
 # BIP_1V
 NumChannels = 4
 
+# ADS1115 Settings
+ads1115_sensor_type = differential_value_read
+#gain = 
+#data_rate = 
 
 
 [PPRemote Config]
