R Moving settings for ADS1115 to config

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -14,9 +14,10 @@ sleep_between_channels = 0.25
 number_of_channels = 4
 low_chan = 0
 high_chan = 3
-channels = [True, True, True, True]
+channels = [True, True, True, False]
 sensor_type = 'mcc_single_value_read'
 # other_sensor_types = 'mcc_single_value_read'  # 'grove_gsr' # 'dummy_read' #'single_ended' #'differential_i2c' #'single_ended' #'differential'
+
 
 # MCC128 Settings
 DAQ = "daqhats"
@@ -34,8 +35,9 @@ NumChannels = 4
 
 # ADS1115 Settings
 ads1115_sensor_type = differential_value_read
-gain = 16
-#data_rate = 
+gain = 4
+data_rate = 8
+
 
 
 [PPRemote Config]
