r reading in Channels list from config.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -14,7 +14,7 @@ sleep_between_channels = 0.25
 number_of_channels = 4
 low_chan = 0
 high_chan = 3
-channels = [True, True, True, False]
+channels = [True, True, True, True]
 sensor_type = 'mcc_single_value_read'
 # other_sensor_types = 'mcc_single_value_read'  # 'grove_gsr' # 'dummy_read' #'single_ended' #'differential_i2c' #'single_ended' #'differential'
 
