--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,7 @@
 [Default]
 # General info
-daq_to_use = ADS1115Stream
+daq_to_use = MCC128Daq
+#other options: ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
