R reading all MCC128 values from config file.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -16,23 +16,24 @@ number_of_channels = 4
 low_chan = 0
 high_chan = 3
 channels = [True, True, True, True]
-sensor_type = 'mcc_single_value_read'
-# other_sensor_types = 'mcc_single_value_read'  # 'grove_gsr' # 'dummy_read' #'single_ended' #'differential_i2c' #'single_ended' #'differential'
-
+sensor_type = mcc_single_value_read
+# other_sensor_types = mcc_single_value_read  # grove_gsr dummy_read #single_ended #differential_i2c #single_ended #differential
 
 # MCC128 Settings
-DAQ = "daqhats"
-Device = "mcc128"
-ReadMode = "Differential"
-analog_input_range = "AnalogInputRange.BIP_10V"
-reader_type = 'differential'  
-# or 'single-ended'
-options = "OptionFlags.DEFAULT"
-input_mode = "AnalogInputMode.DIFF"  
+DAQ = daqhats
+Device = mcc128
+ReadMode = Differential
+analog_input_range = AnalogInputRange.BIP_10V
+reader_type = differential
+# or single-ended
+options = OptionFlags.DEFAULT
+mcc_input_mode = AnalogInputMode.DIFF
 # or SE
-input_range = "AnalogInputRange.BIP_10V" 
+input_range = AnalogInputRange.BIP_10V
 # BIP_1V
 NumChannels = 4
+mcc_hat_error = HatError
+sample_interval = 0.1
 
 # ADS1115 Settings
 ads1115_sensor_type = differential_value_read
@@ -42,7 +43,7 @@ data_rate = 8
 
 
 [PPRemote Config]
-DAQ = "daqhats"
-Device = "mcc128"
+DAQ = daqhats
+Device = mcc128
 NumChannels = 2
 
