--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -28,7 +28,7 @@ reader_type = differential
 # or single-ended
 options = OptionFlags.DEFAULT
 mcc_input_mode = AnalogInputMode.DIFF
-# or SE
+# AnalogInputMode.DIFF or AnalogInputMode.SE
 input_range = AnalogInputRange.BIP_10V
 # BIP_1V
 NumChannels = 4
