--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,6 @@
 [Default]
 # General info
-daq_to_use = MCC128Daq
+daq_to_use = ADS1115Stream
 #other options: ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
