F got ADS1115i2c working for differential reads.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,7 +1,7 @@
 [Default]
 # General info
-daq_to_use = ADS1115Stream
-#other options: ADS1115Stream, MCC128Daq
+daq_to_use = ADS1115i2cStream
+#other options: ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
