f added file header and copyright notice

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,7 +1,7 @@
 [Default]
 # General info
-daq_to_use = ADS1115i2cStream
-#other options: ADS1115i2cStream, ADS1115Stream, MCC128Daq
+daq_to_use = MCC128Daq
+#other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
@@ -39,6 +39,8 @@ sample_interval = 0.1
 ads1115_sensor_type = differential_value_read
 gain = 4
 data_rate = 8
+
+# ADS1256 settings
 
 
 
