--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -18,6 +18,8 @@ high_chan = 3
 channels = [True, True, True, True]
 sensor_type = mcc_single_value_read
 # other_sensor_types = mcc_single_value_read  # grove_gsr dummy_read #single_ended #differential_i2c #single_ended #differential
+gain = 4
+data_rate = 8
 
 # MCC128 Settings
 DAQ = daqhats
@@ -37,11 +39,11 @@ sample_interval = 0.1
 
 # ADS1115 Settings
 ads1115_sensor_type = differential_value_read
-gain = 4
-data_rate = 8
 
 # ADS1256 settings
-
+ads1256_sensor_type = single_value_read
+# ScanMode: 0  Single-ended input  8 channel1 Differential input  4 channe 
+ScanMode = 0
 
 
 [PPRemote Config]
