--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -7,7 +7,7 @@ sensor_read_frequency = 0.1
 other_sensor_read_frequency_values = #0.1 #25 #Hz
 network_write_frequency = 10
 other_network_write_frequency_values = #10.0 #Hz How many data points will be graphed each second
-to_log = False
+to_log = True
 
 # General settings
 sleep_between_reads = -1
