--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -18,7 +18,7 @@ high_chan = 3
 channels = [True, True, True, True]
 sensor_type = mcc_single_value_read
 # other_sensor_types = mcc_single_value_read  # grove_gsr dummy_read #single_ended #differential_i2c #single_ended #differential
-gain = 4
+gain = 1
 data_rate = 8
 
 # MCC128 Settings
@@ -41,9 +41,9 @@ sample_interval = 0.1
 ads1115_sensor_type = differential_value_read
 
 # ADS1256 settings
-ads1256_sensor_type = single_value_read
-# ScanMode: 0  Single-ended input  8 channel1 Differential input  4 channe 
-ScanMode = 0
+ads1256_sensor_type = differential_value_read
+# ScanMode: 0=Single-ended input  8 channel; 1=Differential input  4 channe 
+ScanMode = 1
 
 
 [PPRemote Config]
