R refactoring template method to call thru function pointers daq reads and conversions.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -4,19 +4,19 @@ daq_to_use = ADS1256Stream
 #other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
-other_sensor_read_frequency_values = #0.1 #25 #Hz
+#other_sensor_read_frequency_values = #0.1 #25 #Hz
 network_write_frequency = 10
-other_network_write_frequency_values = #10.0 #Hz How many data points will be graphed each second
+#other_network_write_frequency_values = #10.0 #Hz How many data points will be graphed each second
 to_log = False
 
 # General settings
-sleep_between_reads = 1
+sleep_between_reads = -1
 sleep_between_channels = -1
 number_of_channels = 4
 low_chan = 0
 high_chan = 3
 channels = [True, True, True, True]
-sensor_type = mcc_single_value_read
+sensor_type = differential
 # other_sensor_types = mcc_single_value_read  # grove_gsr dummy_read #single_ended #differential_i2c #single_ended #differential
 gain = 1
 data_rate = 8
@@ -44,7 +44,6 @@ ads1115_sensor_type = differential_value_read
 ads1256_sensor_type = differential_value_read
 # ScanMode: 0=Single-ended input  8 channel; 1=Differential input  4 channe 
 ScanMode = 1
-
 
 [PPRemote Config]
 DAQ = daqhats
