--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,6 @@
 [Default]
 # General info
-daq_to_use = ADS1256Stream
+daq_to_use = MCC128Daq
 #other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
@@ -10,7 +10,7 @@ network_write_frequency = 1
 to_log = False
 
 # General settings
-sleep_between_reads = -1
+sleep_between_reads = 1
 sleep_between_channels = -1
 number_of_channels = 4
 low_chan = 0
