R! Now working for ADS1115 single_ended and differential reads.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,6 @@
 [Default]
 # General info
-daq_to_use = ADS1256Stream
+daq_to_use = ADS1115Stream
 #other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
@@ -27,7 +27,7 @@ Device = mcc128
 ReadMode = Differential
 analog_input_range = AnalogInputRange.BIP_10V
 reader_type = differential
-# or single-ended
+# differential or single_ended
 options = OptionFlags.DEFAULT
 mcc_input_mode = AnalogInputMode.DIFF
 # AnalogInputMode.DIFF or AnalogInputMode.SE
