R!! Changed design to return daq_method from open and inject into read. This breaks other DAQs and must be fixed.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -17,6 +17,7 @@ low_chan = 0
 high_chan = 3
 channels = [True, True, True, True]
 sensor_type = differential
+# differential or single_ended
 # other_sensor_types = mcc_single_value_read  # grove_gsr dummy_read #single_ended #differential_i2c #single_ended #differential
 gain = 1
 data_rate = 8
@@ -38,7 +39,7 @@ mcc_hat_error = HatError
 sample_interval = 0.1
 
 # ADS1115 Settings
-ads1115_sensor_type = differential_value_read
+#ads1115_sensor_type = differential_value_read
 
 # ADS1256 settings
 ads1256_sensor_type = differential_value_read
