R! Sort of working for ADS1115i2c reads but getting zeros (perhaps the library isn't installed.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,6 @@
 [Default]
 # General info
-daq_to_use = ADS1115Stream
+daq_to_use = ADS1115i2cStream
 #other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
@@ -39,7 +39,7 @@ mcc_hat_error = HatError
 sample_interval = 0.1
 
 # ADS1115 Settings
-#ads1115_sensor_type = differential_value_read
+#None
 
 # ADS1256 settings
 ads1256_sensor_type = differential_value_read
