--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,6 +1,6 @@
 [Default]
 # General info
-daq_to_use = ADS1115i2cStream
+daq_to_use = MCC128Daq
 #other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
