R! Additional code cleanup.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -42,9 +42,8 @@ sample_interval = 0.1
 #None
 
 # ADS1256 settings
-ads1256_sensor_type = differential_value_read
+# None (ScanMode set by setting generic sensor_type setting
 # ScanMode: 0=Single-ended input  8 channel; 1=Differential input  4 channe 
-ScanMode = 1
 
 [PPRemote Config]
 DAQ = daqhats
