F Created new DAQStream called ADS1256StreamIS so I don't have to touch the ADS1256Stream to add Impedence Spectrocopy features.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -1,7 +1,7 @@
 [Default]
 # General info
-daq_to_use = ADS1256Stream
-#other options: ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
+daq_to_use = ADS1256StreamIS
+#other options: ADS1256StreamIS,ADS1256Stream, ADS1115i2cStream, ADS1115Stream, MCC128Daq
 data_log_frequency = 1
 sensor_read_frequency = 0.1
 #other_sensor_read_frequency_values = #0.1 #25 #Hz
@@ -10,7 +10,7 @@ network_write_frequency = 1
 to_log = False
 
 # General settings
-sleep_between_reads = 1
+sleep_between_reads = -1
 sleep_between_channels = -1
 number_of_channels = 4
 low_chan = 0
