F!! Added support for two sine wave oscillators on ADS1256IS DAQStream to support impedence spectrometer. Also, added needed files to Git.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -43,7 +43,16 @@ sample_interval = 0.1
 
 # ADS1256 settings
 # None (ScanMode set by setting generic sensor_type setting
-# ScanMode: 0=Single-ended input  8 channel; 1=Differential input  4 channe 
+# ScanMode: 0=Single-ended input  8 channel; 1=Differential input  4 channel
+dac1_frequency = 1
+dac1_sample_rate = 512
+dac1_interval = 1
+dac2_frequency = 1
+dac2_sample_rate = 512
+dac2_interval = 1
+
+
+
 
 [PPRemote Config]
 DAQ = daqhats
