F! Got sine wave generator dimming LED on HAT showing that I can output to DAC.

--- a/pi/DAQStreams.ini
+++ b/pi/DAQStreams.ini
@@ -45,11 +45,11 @@ sample_interval = 0.1
 # None (ScanMode set by setting generic sensor_type setting
 # ScanMode: 0=Single-ended input  8 channel; 1=Differential input  4 channel
 dac1_frequency = 1
-dac1_sample_rate = 512
-dac1_interval = 1
+dac1_sample_rate = 256
+dac1_interval = .1
 dac2_frequency = 1
-dac2_sample_rate = 512
-dac2_interval = 1
+dac2_sample_rate = 256
+dac2_interval = .1
 
 
 
